--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "echarts": "^5.4.3",
+    "echarts-gl": "^2.0.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
