--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts-gl": "^2.0.9",
     "jwt-decode": "^3.1.2",
     "react-bootstrap": "^2.8.0",
+    "react-error-overlay": "^6.0.11",
     "react-tsparticles": "^2.12.2",
     "tsparticles-slim": "^2.12.0"
   },
