--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.8.0",
     "react-error-overlay": "^6.0.11",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^2.8.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
