--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
     "concurrently": "^8.2.1",
     "echarts": "^5.4.3",
