--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
     "echarts": "^5.4.3",
     "echarts-gl": "^2.0.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-error-overlay": "^6.0.11",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-otp-input": "^3.0.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.8.0",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
